<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F7F7F7"
    android:focusableInTouchMode="true"
    android:focusable="true"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical">
    <FrameLayout
            android:id="@+id/toolbar"
            android:paddingTop="17dp"
            android:background="@mipmap/toolbar"
            android:layout_width="match_parent"
            android:layout_height="70dp">
        <ImageView
                android:id="@+id/iv_ecg_logo"
                android:src="@mipmap/home_ecg_logo"
                android:layout_marginTop="8dp"
                android:layout_marginStart="15dp"
                android:layout_width="50dp"
                android:layout_height="30dp"/>
        <TextView
                android:textColor="@color/white"
                android:text="首页"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <ImageView
                android:src="@mipmap/home_tag_logo"
                android:layout_marginTop="8dp"
                android:layout_gravity="end"
                android:layout_marginEnd="15dp"
                android:layout_width="30dp"
                android:layout_height="30dp"/>
    </FrameLayout>
    <com.scwang.smartrefresh.layout.SmartRefreshLayout
            android:layout_marginTop="70dp"
            app:srlEnableRefresh="false"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <com.blackflagbin.kcommon.widget.MyScrollview
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <com.zhouwei.mzbanner.MZBannerView
                        android:id="@+id/banner"
                        app:open_mz_mode="true"
                        app:canLoop="true"
                        app:indicatorAlign="center"
                        app:middle_page_cover="false"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_width="match_parent"
                        android:layout_height="180dp"/>
                <TextView
                        android:id="@+id/ecg_measure"
                        android:drawableTop="@mipmap/ecg"
                        android:text="@string/ecg_measure"
                        android:drawablePadding="15dp"
                        android:layout_marginTop="20dp"
                        app:layout_constraintTop_toBottomOf="@id/banner"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/ecg_calendar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:id="@+id/ecg_calendar"
                        android:drawableTop="@mipmap/calendar"
                        android:text="@string/ecg_calendar"
                        android:drawablePadding="15dp"
                        android:layout_marginTop="20dp"
                        app:layout_constraintTop_toBottomOf="@id/banner"
                        app:layout_constraintStart_toEndOf="@id/ecg_measure"
                        app:layout_constraintEnd_toStartOf="@id/history_report"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:id="@+id/history_report"
                        android:drawableTop="@mipmap/history"
                        android:text="@string/history_report"
                        android:drawablePadding="15dp"
                        android:layout_marginTop="20dp"
                        app:layout_constraintTop_toBottomOf="@id/banner"
                        app:layout_constraintStart_toEndOf="@id/ecg_calendar"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:id="@+id/friend_follow"
                        android:drawableTop="@mipmap/follow"
                        android:text="@string/friend_follow"
                        android:drawablePadding="15dp"
                        android:layout_marginTop="20dp"
                        app:layout_constraintTop_toBottomOf="@id/ecg_measure"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/my_setting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:id="@+id/my_setting"
                        android:drawableTop="@mipmap/setting"
                        android:text="@string/my_setting"
                        android:drawablePadding="15dp"
                        android:layout_marginTop="20dp"
                        app:layout_constraintTop_toBottomOf="@id/ecg_measure"
                        app:layout_constraintStart_toEndOf="@id/friend_follow"
                        app:layout_constraintEnd_toStartOf="@id/handle_guide"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:id="@+id/handle_guide"
                        android:drawableTop="@mipmap/handle_guide"
                        android:text="@string/handle_guide"
                        android:drawablePadding="15dp"
                        android:layout_marginTop="20dp"
                        app:layout_constraintTop_toBottomOf="@id/ecg_measure"
                        app:layout_constraintStart_toEndOf="@id/my_setting"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler"
                        android:layout_marginTop="20dp"
                        app:layout_constraintTop_toBottomOf="@id/friend_follow"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.blackflagbin.kcommon.widget.MyScrollview>

    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
</FrameLayout>
