<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/cl_host"
        tools:background="@mipmap/bg_login_ecg1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
            android:id="@+id/iv_logo"
            android:src="@mipmap/logo_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <com.google.android.material.tabs.TabLayout
            android:id="@+id/tablayout"
            app:tabSelectedTextColor="@color/ecg1_color"
            app:tabIndicatorColor="@color/ecg1_color"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            app:tabIndicatorHeight="1dp"
            app:tabIndicatorFullWidth="true"
            app:tabTextColor="@color/ff9f9f9f"
            app:layout_constraintVertical_bias="0.44"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
        <com.google.android.material.tabs.TabItem
                android:text="密码重置"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </com.google.android.material.tabs.TabLayout>

    <androidx.cardview.widget.CardView
            android:id="@+id/cv1"
            app:layout_constraintTop_toBottomOf="@id/tablayout"
            app:cardBackgroundColor="@null"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:cardElevation="1dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
                android:drawableStart="@mipmap/mobile"
                android:id="@+id/et_moblie"
                android:inputType="phone"
                android:maxLength="11"
                android:hint="@string/phone_number"
                style="@style/et_style"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
            android:id="@+id/cv2"
            app:layout_constraintTop_toBottomOf="@id/cv1"
            app:cardBackgroundColor="@null"
            android:layout_marginTop="12dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:cardElevation="1dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
                android:drawableStart="@mipmap/password"
                android:id="@+id/et_password"
                android:inputType="textPassword"
                android:hint="@string/password"
                style="@style/et_style"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
            android:id="@+id/cv3"
            app:layout_constraintTop_toBottomOf="@id/cv2"
            app:cardBackgroundColor="@null"
            android:layout_marginTop="12dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:cardElevation="1dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
                android:drawableStart="@mipmap/password"
                android:id="@+id/et_password2"
                android:inputType="textPassword"
                android:hint="再次输入密码"
                style="@style/et_style"/>
    </androidx.cardview.widget.CardView>


    <TextView
            android:id="@+id/tv_confirm"
            android:text="@string/define"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintTop_toBottomOf="@id/cv3"
            app:layout_constraintStart_toStartOf="@id/cv1"
            app:layout_constraintEnd_toStartOf="@id/tv_exit"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/tv_bg_nopadding"
            android:gravity="center"
            android:layout_width="0dp"/>

    <TextView
            android:id="@+id/tv_exit"
            android:text="@string/exit"
            app:layout_constraintBottom_toBottomOf="@id/tv_confirm"
            app:layout_constraintStart_toEndOf="@id/tv_confirm"
            app:layout_constraintEnd_toEndOf="@id/cv1"
            android:layout_height="wrap_content"
            android:background="@drawable/tv_bg_nopadding"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="center"
            android:layout_width="0dp"/>
    <TextView
            android:id="@+id/tv_terms"
            android:textSize="12sp"
            android:textColor="@color/ff9f9f9f"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>
